# 88W-lines-C-Generator

./: CMakeLists.txt  CodeGenerator.cpp  LICENSE  NumInfo.cpp  README.md  main.cpp
include/: CodeGenerator.h  NumInfo.h
test/test_CodeGen/: test_CodeGen.cpp
test/test_NumInfo/: test_NumInfo.cpp
